fix bug #32810 (fread after tmpfile() reads only 8192 bytes)